--- a/ReactFolder/package.json
+++ b/ReactFolder/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.1.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "vite": "^7.2.0"   
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -22,7 +23,6 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "vite": "^7.2.0"
+    "globals": "^16.4.0"
   }
 }
