--- a/ReactFolder/package.json
+++ b/ReactFolder/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0"
+    "globals": "^16.4.0",
+    "vite": "^7.2.0"
   }
 }
