--- a/ReactFolder/vercel.json
+++ b/ReactFolder/vercel.json
@@ -1,8 +1,3 @@
 {
-  "builds": [
-    { "src": "vite.config.js", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
